# cpp-russia-2017-rscpp

./: CMakeLists.txt  README.md
macro-substitution/: CMakeLists.txt  shader_program.h  uniform.h  uniform_fwd.h  uniforms_set.h  usage.cpp
navigation/: CMakeLists.txt  abrahams-dimov.cpp  adl.cpp  usings.cpp
src/: ct-arithmetic.cpp  formatter-tests.cpp  formatter.h  funny-geom.cpp  intrusive-ptr.cpp  intrusive-ptr.h  logging.cpp  macro-substitution.cpp  navigation.cpp
src/analysis/: control-flow.cpp  inheritance.cpp
src/code-assistance/: completion.cpp  method-generation.cpp
src/navigation/: abrahams_dimov.h  adl.h  usings.h
